files/phpService.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-apache-pvctst
spec:
  # For GKE change it to LoadBalancer
  selector:
    app: php-apache-pvctst
  ports:
    - port: 80
