files/redisService.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-pvctst
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis-eslahi
